QT Login Form application

--- a/LoginForm/CMakeLists.txt
+++ b/LoginForm/CMakeLists.txt
@@ -11,8 +11,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Core Sql)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Core Sql)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -45,7 +45,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(LoginForm PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(LoginForm PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Sql)
 
 set_target_properties(LoginForm PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
